# sigvis

./: .gitignore  CLAUDE.md  CMakeLists.txt  README.md  imgui.ini
cmake/: Dependencies.cmake  EmbedSpirv.cmake  Shaders.cmake
examples/: render_constellation.ipynb  render_eye.py  render_waveform.py  rendering_tests.ipynb  sigutils.py
examples/.jupyter/: collaboration_sessions.json
plot_renderer/: CMakeLists.txt
plot_renderer/include/plot/: eye_diagram_renderer.hpp  histogram.hpp  roll_scope.hpp  sample_ring.hpp  stream_scope.hpp  types.hpp  waveform_scope.hpp
plot_renderer/shaders/: decay.frag  histogram_sample.frag  histogram_sample.vert  lines_renderer.frag  lines_renderer.mesh  lines_renderer.mesh.bak  points_renderer.frag  points_renderer.mesh  roll_composite.frag  roll_reduce.comp  stream_reduce.comp  stream_trigger.mesh  waveform_renderer.mesh
plot_renderer/src/: eye_diagram_renderer.cpp  histogram.cpp  roll_scope.cpp  sample_ring.cpp  stream_scope.cpp  waveform_scope.cpp
pyrendering/: CMakeLists.txt
pyrendering/src/: bindings.cpp
viewer/: CMakeLists.txt  DESIGN.md  README.md
viewer/src/: audio_source.cpp  audio_source.hpp  data_source.cpp  data_source.hpp  main.cpp  plstream_source.cpp  plstream_source.hpp  source.hpp  view_state.hpp
vulkan_engine/: CMakeLists.txt
vulkan_engine/include/vke/: buffer.hpp  command_buffer.hpp  context.hpp  descriptor.hpp  error.hpp  fwd.hpp  image.hpp  pipeline.hpp  sampler.hpp  shader.hpp  submit.hpp  swapchain.hpp  vke.hpp
vulkan_engine/src/: buffer.cpp  command_buffer.cpp  context.cpp  descriptor.cpp  error.cpp  image.cpp  pipeline.cpp  sampler.cpp  shader.cpp  submit.cpp  swapchain.cpp  vma.cpp
